<resources>
    <string name="app_name">ProjectManagement</string>
    <string name="title_activity_graphing_test">GraphingTest</string>
    <string name="title_activity_progress">ProgressActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_create_account">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_create_project">CreateProject</string>

    <string name="Progress">Progress</string>
    <string name="task">Task</string>
    <string name="messaging">Messaging</string>
    <string name="calendar">Calendar</string>

    <string name="members">Members</string>
    <string name="action_settings">Settings</string>

    <string name="project_name">Project Name:</string>
    <string name="project_description">Project Description:</string>
    <string name="project_leader">Project Leader:</string>
    <string name="project_add">Add Members:</string>
    <string name="title_activity_leader_view">LeaderView</string>
    <string name="title_activity_member_view">MemberView</string>
    <string name="other">Other</string>
    <string name="task_name">Task</string>
    <string name="title_activity_member_list">MemberList</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_profile_activitty">ProfileActivitty</string>
    <string name="member_name">First Name</string>
    <string name="member_name_last">Last Name</string>
    <string name="project_description1">Project Description</string>
    <string name="member_profile">Profile</string>
    <string name="title_activity_add_membersto_project">AddMemberstoProject</string>
    <string name="title_activity_create_task">CreateTask</string>
    <string name="pick_a_member">Pick a Member</string>
    <string name="pick_a_priority">Pick a Member</string>
    <string name="pick_a_dependency">Pick a dependency</string>
    <string name="title_activity_task_view">TaskViewActivity</string>

    <string name="message_subject">Message Subject</string>
    <string name="message_body">Message Description</string>
    <string name="message_send">Send Message</string>
    <string name="title_activity_theme">ThemeActivity</string>
    <string name="title_activity_project_description">ProjectDescriptionActivity</string>
    <string name="title_activity_reminder">Reminder</string>
</resources>
