<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.kutztown.projectmanagement.activity.MemberView">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.PopupOverlay">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#82cffd"
            android:paddingBottom="5dp">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#FFFFFF"
                app:popupTheme="@style/AppTheme.PopupOverlay" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:contentDescription="Logo"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/banner_logo"/>
                <android.support.v7.widget.ActionMenuView
                    android:layout_gravity="start"
                    android:id="@+id/amvMenu06"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    />
            </android.support.v7.widget.Toolbar>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.kutztown.projectmanagement.activity.LeaderView"
        tools:showIn="@layout/activity_leader_view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Project Name Here"
            android:textSize="22sp"
            android:textStyle="bold"
            android:id="@+id/leader_prj_label"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">
            <Button
                android:id="@+id/progress1_ld_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/Progress"
                android:textColor="#FFFFFF"
                android:padding="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                android:textAlignment="center"
                android:background="#82cffd"/>

            <Button
                android:id="@+id/task1_ld_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:padding="15dp"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"

                android:text="@string/task"
                android:textAlignment="center"
                android:background="#82cffd"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_below="@id/linear1">
            <Button
                android:id="@+id/message1_ld_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/messaging"
                android:textColor="#FFFFFF"
                android:padding="15dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginRight="5dp"
                android:textAlignment="center"
                android:background="#82cffd"/>

            <Button
                android:id="@+id/calendar1_id_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:padding="15dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:text="@string/calendar"
                android:textAlignment="center"
                android:background="#82cffd"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="horizontal"
            android:layout_below="@id/linear2"
            android:baselineAligned="false">
            <Button
                android:id="@+id/description1_ld_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/project_description1"
                android:textColor="#FFFFFF"
                android:padding="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginRight="5dp"
                android:background="#82cffd"/>

            <Button
                android:id="@+id/members1_ld_button"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:padding="15dp"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/other"
                android:textAlignment="center"
                android:background="#82cffd"/>
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
