<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.kutztown.projectmanagement.activity.CreateProject">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.PopupOverlay">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#82cffd"
            android:paddingBottom="5dp">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#FFFFFF"
                app:popupTheme="@style/AppTheme.PopupOverlay" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:contentDescription="Logo"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/banner_logo"/>
            </android.support.v7.widget.Toolbar>
        </LinearLayout>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_name"
            android:layout_marginTop="70dp"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/project_name"
            android:lines="1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_description"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/projectDescField"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_leader"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:enabled="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/editText02"
            android:enabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/createProject"
            />


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
