<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.kutztown.projectmanagement.activity.MessageActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.PopupOverlay">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#82cffd"
            android:paddingBottom="5dp">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#FFFFFF"
                app:popupTheme="@style/AppTheme.PopupOverlay" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:contentDescription="Logo"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/banner_logo"/>
                <android.support.v7.widget.ActionMenuView
                    android:id="@+id/amvMenu02"
                    android:layout_width="wrap_content"
                    android:layout_gravity="start"
                    android:layout_height="?attr/actionBarSize"/>
            </android.support.v7.widget.Toolbar>

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Messaging"
            android:textSize="22sp"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_subject"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/message_subject_field"
            android:lines="1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_body"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/message_body_field"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_send"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:id="@+id/createProject"
            />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>