<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.kutztown.projectmanagement.activity.CreateTask">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.PopupOverlay">

        <LinearLayout
            android:id="@+id/color_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_default"
            android:paddingBottom="5dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#FFFFFF"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <ImageView
                    android:id="@+id/mini_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="Logo"
                    android:src="@drawable/banner_logo" />

                <android.support.v7.widget.ActionMenuView
                    android:id="@+id/amvMenu09"
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="start" />
            </android.support.v7.widget.Toolbar>
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.kutztown.projectmanagement.activity.CreateTask"
        tools:showIn="@layout/activity_create_task">


        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="Create Task"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="#FFFFFF"
            android:hint="Task Name"
            android:paddingLeft="15dp" />

        <TextView
            android:id="@+id/name_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="#FFFFFF"
            android:hint="Project Name"
            android:paddingLeft="15dp" />

        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="#FFFFFF"
            android:hint="Task Description"
            android:lines="4"
            android:paddingLeft="15dp"
            android:scrollbars="vertical" />

        <Spinner
            android:id="@+id/spinner01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#FFFFFF"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:prompt="@string/pick_a_member">

        </Spinner>

        <Spinner
            android:id="@+id/spinner02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#FFFFFF"
            android:entries="@array/pick_priority"
            android:prompt="@string/pick_a_priority" />

        <Spinner
            android:id="@+id/spinner03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#FFFFFF"
            android:entries="@array/dependency"
            android:prompt="@string/pick_a_dependency" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/datepicker01"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/color_default"
                android:padding="15dp"
                android:text="Pick task's due date"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/create_task"
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_weight="1"
                android:background="@color/color_default"
                android:padding="15dp"
                android:text="Create Task"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
